# efficient-ai

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  BLOG_POST_2026_07_02.md  BLOG_POST_AI_TO_HUMAN.md  DEPLOYMENT.md  Dockerfile  LANDING_PAGE.md  MONITORING.md  README.md  SECURITY.md  X402_MONETIZATION.md  coverage.xml  demo_client.py  docker-compose.yml  openapi.yaml  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml  deploy.yml  static.yml
agent/: .env.example  .eslintrc.js  PROJECT_TRAJECTORY.md  README.md  agent.js  monitor.js  package-lock.json  package.json
agent/.github/workflows/: ci.yml
agent/__tests__/agent/: MarkdownAgent.test.js
agent/brain/: alpha_strategies.md  configuration.md  decision_waterfall.md  emergency_procedures.md  error_handling.md  experiment_framework.md  goals.md  guardrails.md  integration_points.md  learning_system.md  performance_metrics.md  quality_standards.md  skills.md  strategy_weights.md  the_loop.md
agent/memory/: content-log.md  daily-log.md  earnings.md  experiments.md  leads.md  lessons.md  opportunities.md  state.md  telemetry.md
agent/public/: index.html
agent/src/agent/: MarkdownAgent.js
agent/src/config/: config.js  logger.js
agent/src/middleware/: auth.js  rateLimit.js  security.js  validation.js  x402.js
agent/src/monitor/: MonitorServer.js
benchmarks/: __init__.py  benchmark.py
efficient/: __init__.py  backends.py  cache.py  cli.py  client.py  config.py  local_engine.py  models.py  proxy.py  router.py  telemetry.py
efficient_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
k8s/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml  servicemonitor.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
tests/: __init__.py  test_cache.py  test_client.py  test_config.py  test_engine.py  test_models.py  test_proxy.py  test_router.py  test_telemetry.py
website/: index.html
